<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:padding="8dp"
    android:layout_height="80dp">

    <ImageView
        android:id="@+id/RowImg"
        android:contentDescription="fav"
        android:gravity="center_vertical"
        android:src="@drawable/ic_favourite_off"
        tools:ignore="HardcodedText"
        android:layout_alignParentStart="true"
        android:layout_width="60dp"
        android:layout_height="60dp" />

    <TextView
        android:id="@+id/rowBandName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/RowImg"
        android:layout_marginLeft="26dp"
        android:layout_toRightOf="@+id/RowImg"
        android:gravity="center_vertical"
        android:text="@string/BandName"
        android:textColor="#000"
        android:textSize="16sp"
        android:fontFamily="sans-serif-light"
        tools:ignore="HardcodedText" />

    <ImageView
        android:id="@+id/imgDelete"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/delete"
        tools:ignore="HardcodedText"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/rowBandGenre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/BandGenre"
        android:textColor="#000"
        android:textSize="14sp"
        tools:ignore="HardcodedText,SmallSp"
        android:layout_alignTop="@+id/imgDelete"
        android:fontFamily="sans-serif-light"
        android:layout_alignStart="@+id/rowBandName" />

    <TextView
        android:id="@+id/rowBandAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/Address"
        android:textColor="#000"
        android:textSize="12sp"
        tools:ignore="HardcodedText,SmallSp"
        android:layout_alignStart="@+id/rowBandGenre"
        android:fontFamily="sans-serif-thin"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/rowBandGenre" />

    <TextView
        android:id="@+id/rowBandPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/BandPrice"
        android:textColor="#000"
        android:textSize="16sp"
        android:fontFamily="sans-serif-light"
        tools:ignore="HardcodedText"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/imgDelete"
        android:layout_marginRight="10dp" />

</RelativeLayout>