<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ds.wit.bandfind.Fragment.AddFragment">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="486dp"
        android:gravity="center" >



        <TextView
            android:text="@string/bandnavadd"
            android:textStyle="bold"
            android:textSize="30dp"
            android:textColor="#888"
            android:fontFamily="sans-serif-condensed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:id="@+id/addbandhead"
            android:layout_marginTop="5dp" />


        <Button
            android:id="@+id/saveBandButton"
            android:background="@drawable/addbutton"
            android:fontFamily="sans-serif-light"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_width="150dp"
            android:layout_height="65dp" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="200dp"
            android:fontFamily="sans-serif-light"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textShortMessage"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/nameTextView"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/addbandhead"
            android:layout_marginRight="20dp"
            android:hint="@string/BandName">

        </EditText>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:inputType="textPersonName"
            android:ems="10"
            android:hint="@string/AddressGeo"
            android:id="@+id/clText2"
            android:layout_below="@+id/clSwitch"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="20dp" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:id="@+id/priceSpinner"
            android:layout_below="@+id/genreSpinner"
            android:layout_alignParentStart="true"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp" />

        <Switch
            android:text="@string/CustomLocation"
            android:layout_width="wrap_content"
            android:fontFamily="sans-serif-light"
            android:layout_height="wrap_content"
            android:id="@+id/clSwitch"
            android:layout_below="@+id/priceSpinner"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp" />

        <TextView
            android:id="@+id/price"
            android:layout_width="60dp"
            android:fontFamily="sans-serif-light"
            android:layout_height="20dp"
            android:gravity="top"
            android:text="@string/Price"
            android:textColor="#000"
            android:ems="10"
            android:layout_below="@+id/genreSpinner"
            android:layout_alignParentStart="true"
            android:layout_marginTop="15dp" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:id="@+id/genreSpinner"
            android:layout_below="@+id/nameEditText"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="-10dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp" />


    </RelativeLayout>


</FrameLayout>
